@@ -3,6 +3,7 @@ package com.xettuyen.service;
 import com.xettuyen.dao.*;
 import com.xettuyen.entity.*;
 import java.util.List;
+import java.util.stream.Collectors;
 
 /**
  * NganhService - Service Layer cho Nganh
@@ -25,7 +26,7 @@ public class NganhService {
         List<NganhTohop> allNganhToHop = nganhToHopDAO.findAll(NganhTohop.class);
         List<NganhTohop> nganhToHopList = allNganhToHop.stream()
             .filter(nt -> nt.getMaNganh().equals(maNganh))
-            .toList();
+            .collect(Collectors.toList());
 
         return new NganhDetail(nganh, nganhToHopList);
     }
